Update to TCGA analysis

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ writeups/
 *\.rds
 TCGA_RDS/
 *\.RData
+1-s2.0-S0092867418302290-mmc1.xlsx
+1-s2.0-S1074761318301213-mmc2.xlsx
+TCGA.legacy.expression.SKCM.GEP.txt
+xCell_TCGA_RSEM.txt
